# ai-services

./: .gitignore  README.md
chatbot-service/: .env.example  .gitignore  README.md  TECHNICAL_DOCUMENTATION.md  api_server.py  chatbot.py  jsonl_to_json.py  openai_chatbot.py  pyproject.toml  requirements.txt
chatbot-service/app/api/: main.py  models.py  routes.py
chatbot-service/app/llm/: agents.py  invoke_llm.py  knowledge_base.py  vectorize_os.py
chatbot-service/app/utils/agents_utils/: filter_builder.py
chatbot-service/app/utils/config/: config_util.py
chatbot-service/app/utils/conversion/: jsonl_to_json_contributions.py  jsonl_to_json_innovations.py  jsonl_to_json_oicrs.py  jsonl_to_json_questions.py
chatbot-service/db_conn/: sql_connection.py
chatbot-service/docs/: HIGH_LEVEL_SOFTWARE_DESIGN.md  PRODUCT_OVERVIEW.md
chatbot-service/interface/: chatbot_interface.html
fast-response-service/: README.md  api_server.py  pyproject.toml  requirements.txt
fast-response-service/app/api/: main.py  models.py  routes.py
fast-response-service/app/llm/: mining.py
qa-service/: .gitignore  Dockerfile  README.md  api_server.py  data.json  pyproject.toml  requirements.txt
qa-service/app/api/: main.py  models.py  routes.py
qa-service/app/llm/: mining.py  schemas.py
qa-service/app/web_scraping/: WEB_SCRAPING_DOCUMENTATION.md  evidence_scraper.py  web_scraping.py
qa-service/docs/: HIGH_LEVEL_DESIGN.md  PRODUCT_OVERVIEW.md
qa-service/tests/: stress_test.py
text-mining-service/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_aiccra_mining.py  test_interface.py
text-mining-service/app/: Dockerfile  supervisord.conf
text-mining-service/app/llm/: map_fields.py  mining.py  mining_supabase.py  vectorize.py  vectorize_supabase.py
text-mining-service/app/mcp/: client.py  server.py
text-mining-service/app/middleware/: auth_middleware.py  prms_auth_middleware.py
text-mining-service/app/schemas/: mining_schemas.py
text-mining-service/app/test/: test_endpoint.py  test_mcp_service.py
text-mining-service/docs/: AICCRA_TEXT_MINING_DOCUMENTATION.md  AICCRA_Text_Mining_SDD.md  STAR_Text_Mining_Product_Overview.md  STAR_Text_Mining_SDD.md
text-mining-service/interface/: aiccra_text_mining_ui.js  bulk_upload.css  bulk_upload.html  bulk_upload.js  index.html
text-mining-service/lakehouse_integration/: .env.example  steps.sh
(+250 files in other folders)
