[project]
name = "aiccra-report-generator"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "boto3",
    "python-dotenv",
    "sqlalchemy",
    "mysql-connector-python",
    "openpyxl",
    "requests-aws4auth",
    "opensearch-py",
    "streamlit",
    "fastapi",
    "uvicorn",
    "mangum"
]