[project]
name = "qa-service"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "PyPDF2",
    "python-docx",
    "numpy",
    "pandas",
    "openpyxl",
    "python-dotenv",
    "pyjwt",
    "aiohttp",
    "requests",
    "fastapi",
    "uvicorn",
    "python-pptx",
    "python-multipart",
    "mangum"
]